test/e2e/pass/runtime/runtime_block_partial_normalization.cst
fn add(a: num, b: num) -> num {
    a + b
}

fn main() {
    let value: runtime num = runtime { add(1, 2) };
    let _ = value;
}
