test/e2e/fail_compile/generics/explicit_generic_arity_mismatch.cst
fn id<T>(value: T) -> T {
    value
}

fn main() -> num {
    id::<num, bool>(1)
}
